--- a/onr_app/pubspec.yaml
+++ b/onr_app/pubspec.yaml
@@ -7,6 +7,7 @@ environment:
   sdk: ">=3.3.0 <4.0.0"
 
 dependencies:
+  animate_do: ^4.2.0
   bloc: ^9.0.0
   dartz: ^0.10.1
   dio: ^5.8.0+1
@@ -19,9 +20,11 @@ dependencies:
   formz: ^0.8.0
   go_router: ^14.8.1
   intl: ^0.19.0
+  json_annotation: ^4.9.0
   loader_overlay: ^5.0.0
   loading_animation_widget: ^1.3.0
   provider: ^6.1.2
+  shimmer: ^3.0.0
 
 dev_dependencies:
   bloc_test: ^10.0.0
@@ -30,6 +33,7 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   flutter_test:
     sdk: flutter
+  json_serializable: ^6.9.4
   mockito: ^5.4.5
 
 flutter:
